[package]
name = "darwinia-elections-phragmen"
version = "2.0.0"
authors = ["darwinia <hello@darwinia.network>"]
edition = "2018"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }

# github.com
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
sp-phragmen = { version = "2.0.0", default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }

# darwinia
darwinia-support = { default-features = false, path = "../support" }

[dev-dependencies]
hex-literal = "0.2.1"
serde = { version = "1.0.101" }

sp-core = { version = "2.0.0", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
sp-io = { version = "2.0.0", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
substrate-test-utils = { version = "2.0.0", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }

pallet-balances = { package = "darwinia-ring", path = "../balances/ring" }

[features]
default = ["std"]
std = [
	"codec/std",

	"frame-support/std",
	"frame-system/std",
	"sp-phragmen/std",
	"sp-runtime/std",
	"sp-std/std",

	"darwinia-support/std",
]
