[package]
name = "darwinia-elections-phragmen"
version = "0.5.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME election pallet for PHRAGMEN"
edition = "2018"
license = "GPL-3.0"
homepage = "https://darwinia.network/"
repository = "https://github.com/darwinia-network/darwinia/"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }

# github.com
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.darwinia.2" }
frame-system = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.darwinia.2" }

sp-phragmen = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.darwinia.2" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.darwinia.2" }
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.darwinia.2" }

# darwinia
darwinia-support = { default-features = false, path = "../support" }

[dev-dependencies]
hex-literal = "0.2.1"
serde = { version = "1.0.101" }

pallet-ring = { package = "darwinia-ring", path = "../balances/ring" }

sp-core = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.darwinia.2" }
sp-io = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.darwinia.2" }

substrate-test-utils = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.darwinia.2" }

[features]
default = ["std"]
std = [
	"codec/std",

	"frame-support/std",
	"frame-system/std",

	"sp-phragmen/std",
	"sp-runtime/std",
	"sp-std/std",

	"darwinia-support/std",
]
